# differentiable-greedy

./: .pre-commit-config.yaml  README.md  experiments.ipynb  pyproject.toml  submodular_maximization.ipynb
.devcontainer/: devcontainer.json
src/: dataset.py  model.py
src/constraint/: __init__.py  base.py  cardinality.py  partition_matroid.py
src/method/: __init__.py  base.py  continuous.py  smoothed_greedy.py  twostage.py
src/selector/: __init__.py  base.py  fw.py  greedy.py  random.py  sga.py  smoothed_greedy.py
src/test/: test_utility.py  utility_slow.py
src/utility/: __init__.py  base.py  influence.py
