[project]
name = "differentiable-greedy"
version = "1.0.dev0"
description = "An unofficial PyTorch implementation of SmoothedGreedy"
readme = "README.md"
maintainers = [
    {name = "Kyohei Atarashi", email="atarashi@i.kyoto-u.ac.jp"},
]

requires-python = ">=3.9"
license = {text = "MIT License"}
classifiers=[
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Topic :: Software Development',
    'Topic :: Scientific/Engineering',
    'Operating System :: POSIX',
    'Operating System :: Unix',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]

dependencies = [
    "torch>=2.5.1",
    "torch>=2.5.1",
    "numpy>=1.26.4",
    "lightning>=2.4.0",
    "pandas",
    "jupyterlab",
    "tqdm",
    "black",
    "isort",
    "flake8",
    "pytest",
    "pyproject-flake8",
    "pre-commit",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["build", "tests"]

[tool.black]
line-length = 88
preview = true

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]
